Ch. 12 Time Series Analysis

--- a/code/1 Ch. 10 Linear Least Square Fit.ipynb
+++ b/code/1 Ch. 10 Linear Least Square Fit.ipynb
@@ -103,8 +103,8 @@
     "\n",
     "interMean = inter + slope * 25\n",
     "print(interMean)\n",
-    "# and slope easier if pounds per decade\n",
     "\n",
+    "# and slope easier if pounds per decade\n",
     "slope * 10"
    ]
   },
@@ -263,8 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sampling Distributio\n",
-    "\n"
+    "## Sampling Distribution"
    ]
   },
   {
